# optoforce

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  test-plot.py
optoforce/: __init__.py  __main__.py  reading.py  status.py
tests/: test_all.py
