[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=2,<4"]

[tool.flit.scripts]
flit = "flit:main"

[tool.flit.metadata]
author = "Alexander Knemeyer"
author-email = "alknemeyer@hey.com"
classifiers = [
  "Intended Audience :: Education",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
description-file = "README.md"
home-page = "https://github.com/alknemeyer/optoforce"
keywords = "sensor,optoforce"
module = "optoforce"
requires = [
  "pyserial ~= 3.0",
  "typing-extensions ~= 3.0; python_version<'3.8'",
]
requires-python = ">=3.6"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
  "tests",
]
